--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="megz.readlog.megz_readlog">
+    package="megz.readlog">
    <application
-        android:label="megz_readlog"
+        android:label="Readlog"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
